--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
       <version>4.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-http-jdk-client</artifactId>
+      <version>4.5.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>io.cucumber</groupId>
